
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int val ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int laddr ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCK_STREAM ;
 int TCP_MAXSEG ;
 scalar_t__ bind (int,struct sockaddr*,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 scalar_t__ listen (int,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*) ;
 scalar_t__ setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;

int main()
{
 struct sockaddr_in laddr;
 memset(&laddr, 0, sizeof(laddr));
 laddr.sin_family = AF_INET;
 laddr.sin_addr.s_addr = inet_addr("127.0.0.1");
 laddr.sin_port = htons(31337);
 int listener = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
 if (listener < 0) {
  printf("[-] Could not open listener.\n");
  return -1;
 }
 int val = 12;
 if (setsockopt(listener, IPPROTO_TCP, TCP_MAXSEG, &val, sizeof(val)) < 0) {
  printf("[-] Could not set sockopt.\n");
  return -1;
 }
 if (bind(listener, (struct sockaddr*)&laddr, sizeof(struct sockaddr)) < 0) {
  printf("[-] Could not bind to address.\n");
  return -1;
 }
 if (listen(listener, 1) < 0) {
  printf("[-] Could not listen.\n");
  return -1;
 }
 int hello = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
 if (hello < 0) {
  printf("[-] Could not open connector.\n");
  return -1;
 }
 if (connect(hello, (struct sockaddr*)&laddr, sizeof(struct sockaddr)) < 0) {
  printf("[-] Could not connect to listener.\n");
  return -1;
 }
 printf("[-] Connection did not trigger oops.\n");
 return 0;
}
